--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,76 @@
 body {
     padding-top: 5rem;
+    text-align: center;
 }
+
+.image {
+    height: 25%;
+    width: 25%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 55%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.card {   
+    background-image: linear-gradient(to bottom, #CCCCFF 0%, #CCCCFF 54%, white 52%, white 100%);
+    box-shadow: 0 6px 6px 0 rgba(0, 0, 0, 0.2);
+	  max-width: 600px;
+    max-height: 750px;
+	  margin: auto;
+	  text-align: center;
+  }
+
+  button {
+    background-color: #7F00FF; 
+    border: none;
+    color: white;
+    height: 5%;
+    width: 30%;
+    padding: 8px 50px;  
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 8px;
+    margin-bottom: 8px;
+}
+
+h1 {
+    text-shadow: 2px 2px 4px #000000;
+    color: white;    
+}
+
+.child {
+    display: inline-block;
+    padding: 1rem 1rem;
+    vertical-align: middle;
+  }
+
+.parenta {
+    text-align: center;
+    margin-bottom: 25px;
+}
+
+.container {
+    padding: -20px -16px;
+}
+
+.section1 {
+    color: #00008B;
+    line-height: 1;
+    margin-bottom: 50px;
+}
+
+
+.section2 {
+  margin-top: -15px;
+  text-align: left;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-bottom: -20px;
+}
+
+
+
